Prevent overflow of student names.
The element containing the student name was set to clip overflow
but its size was set to float, so it itself got bigger than its
parent and the name overflowed.  The element now has an explicit
size of 100% and so the names no longer overflow.

--- a/app/assets/stylesheets/ad_hoc_domains.scss
+++ b/app/assets/stylesheets/ad_hoc_domains.scss
@@ -249,6 +249,7 @@ div.row.collapse.allocation {
       float: left;
       overflow: hidden;
       white-space: nowrap;
+      width: 100%;
     }
 
     .duration {
